# RamseyScript

./: CMakeLists.txt  Doxyfile  INSTALL  LICENSE  Makefile  README  check.c  check.h  coloring.c  coloring.h  dump.c  dump.h  file-stream.c  file-stream.h  filter.c  filter.h  filters.h  global.c  global.h  gtk-script-run.c  gtk-script-run.h  gtk-script-view.c  gtk-script-view.h  gtk-text-buffer-stream.c  gtk-text-buffer-stream.h  gtk-ui.c  gtk-ui.h  interface.xml  lattice.c  lattice.h  main-cli.c  main.c  permutation.c  permutation.h  process.c  process.h  ramsey  ramsey.c  ramsey.h  recurse.c  (+14 more)
dump/: dump.c  dump.h  iters-per-length.c  iters-per-length.h
filter/: filter.c  filter.h  gap-set.c  gap-set.h  no-3-aps.c  no-3-aps.h  no-additive-squares.c  no-additive-squares.h  no-consecutive-numbers.c  no-consecutive-numbers.h  no-double-3-aps.c  no-double-3-aps.h  no-double-n-aps.c  no-double-n-aps.h  no-n-aps.c  no-n-aps.h  no-odd-lattice-aps.c  no-odd-lattice-aps.h  no-pythagorean-triples.c  no-pythagorean-triples.h  no-rainbow-aps.c  no-rainbow-aps.h  no-schur-solutions.c  no-schur-solutions.h
ramsey/: coloring.c  coloring.h  equalized-list.c  equalized-list.h  lattice.c  lattice.h  permutation.c  permutation.h  ramsey.c  ramsey.h  sequence.c  sequence.h  word.c  word.h
tests/: main.c  stream.c
